--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,7 +59,7 @@ body {
   background-size: 100% auto;
 }
 
-.advantages-title-first {
+.advantages-intro-title {
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   font-size: 30px;
@@ -67,7 +67,7 @@ body {
   text-align: center;
 }
 
-.advantages-description-first {
+.advantages-intro-description {
   font-family: "PT Sans", sans-serif;
   font-weight: 400;
   font-size: 22px;
