--- a/styles/styles.css
+++ b/styles/styles.css
@@ -358,6 +358,7 @@ fieldset {
 }
 
 .product-card-favourite-button {
+  font-family: "PT Sans", sans-serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
@@ -371,6 +372,7 @@ fieldset {
   line-height: 20px;
   color: #333333;
   background-color: #F2F2F2;
+  text-transform: uppercase;
 }
 
 
@@ -387,7 +389,7 @@ fieldset {
   font-size: 20px;
   line-height: 36px;
   text-align: center;
-  color: #000000;
+  color: #FFFFFF;
   background-color: #82B3D3;
   text-decoration: none;
 
@@ -398,11 +400,16 @@ fieldset {
   background-color: #F2F2F2;
 }
 
+.pagination-points {
+  background: none;
+  color: #000000;
+}
+
 .button {
+  font-family: "PT Sans", sans-serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
   color: #FFFFFF;
   text-transform: uppercase;
-
 }
