--- a/4/styles/styles.css
+++ b/4/styles/styles.css
@@ -7,25 +7,9 @@
   font-display: swap;
 }
 
-@font-face{
+@font-face {
   font-family: "PT Sans";
   font-style: normal;
-  font-weight: 700;
-  src: url("../fonts/ptsans-700.woff2") format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "PT Sans";
-  font-style: italic;
-  font-weight: 400;
-  src: url("../fonts/ptsans-400.woff2") format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "PT Sans";
-  font-style: italic;
   font-weight: 700;
   src: url("../fonts/ptsans-700.woff2") format("woff2");
   font-display: swap;
@@ -39,25 +23,23 @@ body {
   line-height: 21px;
 }
 
-.page-header{
+.page-header {
   background-color: #FFFFFF;
   color: #000000;
 }
 
-.navigation-link{
+.navigation-link {
   color: #000000;
   font-family: "PT Sans", sans-serif;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
   text-decoration: none;
-  text-transform: uppercase;
   text-align: center;
   background-color: #FFFFFF;
-
 }
 
-.navigation-button{
+.navigation-button {
   color: #FFFFFF;
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
@@ -67,10 +49,9 @@ body {
   background-color: #756157;
   text-decoration: none;
   text-transform: uppercase;
-
 }
 
-.main-index{
+.main-index {
   background-image: url("../images/hero_background.jpg");
   background-repeat: no-repeat;
   color: #000000;
@@ -78,7 +59,7 @@ body {
   background-size: 100% auto;
 }
 
-.advantages-title-one{
+.advantages-intro-title {
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   font-size: 30px;
@@ -86,15 +67,17 @@ body {
   text-align: center;
 }
 
-.advantages-description-one{
+.advantages-intro-description {
   font-family: "PT Sans", sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
   text-align: center;
+  color: #333333;
+  background-color: #FFFFFF;
 }
 
-.advantages-title{
+.advantages-title {
   font-family: "PT Sans", sans-serif;
   font-size: 24px;
   line-height: 28px;
@@ -105,7 +88,7 @@ body {
   text-align: center;
 }
 
-.advantages-description{
+.advantages-description {
   font-family: "PT Sans", sans-serif;
   font-weight: 400;
   color: #FFFFFF;
@@ -113,18 +96,14 @@ body {
   text-align: center;
 }
 
-.advantages-item{
-  text-align:center;
-}
-
-.advantages-extra-description{
+.advantages-extra-description {
   font-family: "PT Sans", sans-serif;
   font-weight: 400;
   color: #333333;
   text-align: center;
 }
 
-.advantages-extra-title{
+.advantages-extra-title {
   font-family: "PT Sans", sans-serif;
   font-size: 24px;
   line-height: 28px;
@@ -134,33 +113,40 @@ body {
   text-align: center;
 }
 
-.advantages-extra-item{
+.advantages-extra-item {
   color: #000000;
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.advantages-extra-item:nth-child(2n){
+.advantages-extra-item:nth-child(2n) {
   color: #000000;
   background-color: rgba(131, 179, 211, 0.2);
 }
 
-.recommendations-item{
+.recommendations-item {
   color: #000000;
   background-color: rgba(131, 179, 211, 0.12);
+  text-align: center;
 }
 
-.recommendations-item:nth-child(2n){
+.recommendations-item:nth-child(2n) {
   color: #000000;
   background-color: #FFFFFF;
 }
 
-.search-hostels{
+.recommendations-description {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  color: #333333;
+}
+
+.search-hostels {
   color:#000000;
   background-color:#FFFFFF;
   text-align: center;
 }
 
-.search-hostels-title{
+.search-hostels-title {
   font-family: "PT Sans", sans-serif;
   font-size: 30px;
   line-height: 36px;
@@ -168,7 +154,7 @@ body {
   text-transform: uppercase;
 }
 
-.search-hostels-description{
+.search-hostels-description {
   font-family: "PT Sans", sans-serif;
   font-size: 22px;
   line-height: 26px;
@@ -176,7 +162,7 @@ body {
   color: #333333;
 }
 
-.search-hostels a{
+.search-hostels a {
   font-family: "PT Sans", sans-serif;
   font-size: 20px;
   line-height: 36px;
@@ -187,7 +173,7 @@ body {
   text-decoration: none;
 }
 
-.newsletter{
+.newsletter {
   background-image: url(../images/subscribe.jpg);
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -196,7 +182,7 @@ body {
   text-align: center;
 }
 
-.newsletter-title{
+.newsletter-title {
   font-family: "PT Sans", sans-serif;
   font-size: 30px;
   line-height: 36px;
@@ -204,14 +190,14 @@ body {
   text-transform: uppercase;
 }
 
-.newsletter-description{
+.newsletter-description {
   font-family: "PT Sans", sans-serif;
   font-size: 22px;
   line-height: 26px;
   font-weight: 400;
 }
 
-.newsletter-button{
+.newsletter-button {
   font-family: "PT Sans", sans-serif;
   font-size: 20px;
   line-height: 36px;
@@ -221,19 +207,14 @@ body {
   color:#FFFFFF;
 }
 
-.newsletter-email{
+.newsletter-email {
   background-color: #F2F2F2;
 }
 
-.page-footer{
+.page-footer {
   background-color: #FFFFFF;
   color: #000000;
   font-weight: 400;
-}
-
-.page-footer a{
-  color: #000000;
-  text-decoration: none;
 }
 
 .social-link {
@@ -248,11 +229,187 @@ body {
   text-transform: uppercase;
 }
 
-.contacts{
+.contacts-address-phone {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  text-align: center;
+  color: #000000;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 40px;
   font-style: normal;
+  line-height: 40px;
 }
 
-.footer-copyright{
+.footer-copyright {
   color:#000000;
   background-color: #FFFFFF;
+}
+
+/* Каталог */
+
+.main-inner {
+  font-family: "PT Sans", sans-serif;
+  color:#ffffff;
+  background-color: #000000;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.inner-header {
+  background-image: url("../images/catalog/hostels-photo.jpg");
+  background-repeat: no-repeat;
+}
+
+.inner-header-title {
+  font-size: 60px;
+  line-height: 78px;
+  font-weight: 700;
+  color: inherit;
+}
+.breadcrumbs-link {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.catalog-filter-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: inherit;
+}
+
+.control-input {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  color: inherit;
+}
+
+fieldset {
+  border: none;
+}
+
+.button-apply {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: #82B3D3;
+}
+
+.button-reset {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background: none;
+}
+
+.sorting-search {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  color: #FFFFFF;
+}
+
+.sorting-control {
+  font-weight: 400;
+  color: #333333;
+}
+
+.button-light {
+  color: #242424;
+  border: 2px solid #E5E5E5;
+}
+
+.product-card {
+  background-color: #FFFFFF;
+}
+
+.product-card-link {
+  text-decoration: none;
+}
+
+.product-card-title {
+  font-weight: 700;
+  font-style: 24px;
+  line-height: 28px;
+}
+
+.product-card-item {
+  font-weight: 400;
+  color: #333333;
+}
+
+.product-card-info-link {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-decoration: none;
+  color:#FFFFFF;
+  background-color: #756157;
+}
+
+.product-card-favourite-button {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  background-color: #82B3D3;
+}
+
+.product-card-rating-description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #333333;
+  background-color: #F2F2F2;
+  text-transform: uppercase;
+}
+
+
+
+
+/* Пагинатор */
+
+.paginator {
+  background-color: #FFFFFF;
+}
+
+.pagination-link {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #82B3D3;
+  text-decoration: none;
+
+}
+
+.pagination-current {
+  color:#000000;
+  background-color: #F2F2F2;
+}
+
+.pagination-points {
+  background: none;
+  color: #000000;
+}
+
+.button {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  text-transform: uppercase;
 }
